fix red scrollbars

--- a/styles_v1.css
+++ b/styles_v1.css
@@ -890,8 +890,8 @@ select-replacer > div:first-child {
     }
 
     .custom-scrollbar::-webkit-scrollbar-button {
-        color: red;
-        background-color: red;
+        color: transparent;
+        background-color: transparent;
     }
 
         .key-button {
